# Unreleased
- [fix][patch] Bump minimum `terminal-prompt` version to `0.2.2`.

# Version 0.1.1 - 2023-08-07
- [patch][change] Fix examples and `README.md` for updated crate name.

# Version 0.1.0 - 2023-08-07
- [minor][add] Add `GitAuthenticator` struct for authentication with `git2`.