@@ -4,4 +4,8 @@
 
 [`git2`]: https://docs.rs/git2
 [`GitAuthenticator`]: https://docs.rs/auth-git2/latest/git2_auth/struct.GitAuthenticator.html
-[`GitAuthenticator::run_operation()`]: https://docs.rs/auth-git2/latest/git2_auth/struct.GitAuthenticator.html#method.run_operation
+[`git2::Credentials`]: https://docs.rs/git2/latest/git2/type.Credentials.html
+[`GitAuthenticator::credentials()`]: https://docs.rs/auth-git2/latest/git2_auth/struct.GitAuthenticator.html#method.credentials
+[`GitAuthenticator::clone()`]: https://docs.rs/auth-git2/latest/git2_auth/struct.GitAuthenticator.html#method.clone
+[`GitAuthenticator::fetch()`]: https://docs.rs/auth-git2/latest/git2_auth/struct.GitAuthenticator.html#method.fetch
+[`GitAuthenticator::push()`]: https://docs.rs/auth-git2/latest/git2_auth/struct.GitAuthenticator.html#method.push
